--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
               <h3>PhD candidate in AI Graduate School
               </h3>
               <p>
-                I am a Ph.D. Candidate at AI Graduate School, GIST, advised by Prof. Hae-Gon Jeon. I received B.S. degrees in EECS from GIST in 2020. 
-                My research is mainly focused on 3D Vision. I am currently doing a research internship with the 3D Vision Team at Huawei Noah's Ark Lab, London, UK, until Aug. 2025.
+                I am a Ph.D. Candidate at AI Graduate School, GIST, advised by Prof. Hae-Gon Jeon. I am currently working at a lab located at Yonsei University, South Korea.
+                My research is mainly focused on 3D Vision, specifically human and scene reconstruction, but not limited to. I am open to join internship opportunities in both academia and industry abroad!
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
@@ -159,7 +159,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cube-alt"></i></div>
               <h4 class="title"><a href="">3D Reconstruction</a></h4>
-              <p class="description">Gaussian Splatting, View Synthesis, 3D Human Reconstruction and Animation</p>
+              <p class="description">3DGS-based Scene Reconstruction, 3D Human Reconstruction and Animation</p>
             </div>
           </div>
 
@@ -259,11 +259,11 @@
             </div> -->
             <div class="resume-item">
               <h4>Research Intern</h4>
-              <h5>Dec. 2024 - Aug. 2025</h5>
+              <h5>Dec. 2024 - Sep. 2025</h5>
               <p><em> 3D Vision Team, Huawei Noah's Ark Lab, United Kingdom</em></p>
               <p>
               <ul>
-                <li>3D Scene Reconstruction using Gaussian Splatting</li>
+                <li>3D Scene Reconstruction using Gaussian Splatting on Appearance Varying Environment</li>
               </ul>
               </p>
             </div>
@@ -333,6 +333,27 @@
 
         <div class="row portfolio-container">
 
+          <div class="portfolio-item filter-conf">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/chroma.png" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">CHROMA: Consistent Harmonization of Multi-View Appearance via Bilateral Grid Prediction</h4>
+                  <p class="author"><b>Jisu Shin</b>, Richard Shaw, Seunghyun Shin, Zhensong Zhang, Hae-Gon Jeon, Eduardo Pérez-Pellitero</p>
+                  <p class="description">Under Review</p>
+                  <p class="description">Work done during <b>internship at Huawei Noah's Ark Lab 3D Vision Team, UK</b></p>
+                  <div class="link">
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-text"></i> ICCV</a> -->
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/pdf/2507.15748?"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-github"></i> Code</a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           
           <div class="portfolio-item filter-conf">
             <div class="portfolio-wrap">
@@ -344,10 +365,11 @@
                   <h4 class="title">Video Color Grading via Look-Up Table Generation</h4>
                   <p class="author">Seunghyun Shin, Dongmin Shin, <b>Jisu Shin</b>, Hae-Gon Jeon, and Joon-Young Lee</p>
                   <p class="description">International Conference on Computer Vision (ICCV), 2025</p>
+                  <p class="description">Collaboration with <b>Adobe Research</b></p>
                   <div class="link">
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-text"></i> ICCV</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-github"></i> Code</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://iccv.thecvf.com/Conferences/2025/AcceptedPapers"><i class="bi bi-file-text"></i> ICCV</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2508.00548"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/seunghyuns98/VideoColorGrading"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
               </div>
@@ -364,6 +386,7 @@
                   <h4 class="title">The path-tracing simulation of light-field camera system: SurfCam/GrainCams for lunar surface exploration</h4>
                   <p class="author">Minbae Kim, Minsup Jeong, Mingyeong Lee, Jihun Kim, Young-Jun Choi, Sungsoo S Kim, Hae-Gon Jeon, and <b>Jisu Shin</b></p>
                   <p class="description">Advances in Space Research, 2024</p>
+                  <p class="description">Collaboration with <b>Kasi (Korea Astronomy and Space Science Institute), South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://www.sciencedirect.com/journal/advances-in-space-research"><i class="bi bi-file-text"></i> ASR</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://pdf.sciencedirectassets.com/271642/AIP/1-s2.0-S0273117724012419/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEE4aCXVzLWVhc3QtMSJHMEUCIHAYH6mj%2BRnViT7Qi3zWfzszFtlXOLUivevhN%2BPD5SDgAiEAyt6W%2FizNSHXuex5O7lBMHJYeAxKSF9fCQx69jsvyO%2BYqswUIRxAFGgwwNTkwMDM1NDY4NjUiDPsBZsve6LoFIsYBQCqQBU0sKBz4UmZGzfsV%2FZFxmU7uDpqcMo4IherWbg9Oh1qbpd9Psv9NkHdmxeduwwhumZB2BpTAhgO5c%2FEPWzjSU180Ulbeoq0kLdrtQnXxh6v5But47rQxpjwund48BnBymm3NDZ4lbvwxQs8NICII1zU6i0pb1t5Wwl54jHAfouSnSFOmJps30Msgfa2I9vjkZVwzd6jrLknLkFfLVrLoWRAufdrloBo0myEe36WTOUc09HTxAJpXVst1RFiUSCIFQFsgtvXc3%2B1G95ok5mHQiT4ucS90hadjBTe9gCleNnSp3FGePqjwZW0BAdVpmjAWJzn488GVXIDQrORbEh7O9vd2OqhmG17uILIPi8S5HuBJJ2Aucx11I51XFJwNA4Op6zOTK2XOol0ovW714slHZEu1zsy6Mvwm2Vlj71LFP8%2FCrpQsB%2Bt29EqBIUgI6FzZ0p1%2BhyIe45arZTIuNxqFEPy6X4XzFkOSgce3MIsjWhoYkFnuvm8uPbJA3RtO399SnFoFgnurjxQH7xOpQhh4sfHICCjzNLfRwsb02oTYRC0Ilb%2F0rkfwrPbNdOoV%2BxbaubJNuOJoC%2FNnR9KdiVBvv1FzpQJoPuoz3XkLeuCxZ0LFww1hv2ch71ef%2FW9g%2BQ6kvw7z%2BPwvpbUZr8GaCS6It%2BF54VqgmVi2abhBL2mVxzsZFI1jGeusGCXqmeOZDLECgNTvkbzbqzwx7CuBNhC6ltI%2BZTkMG1I4%2FHqLtH9OpY92J%2BenJV1tFH%2FXHf6APqcFAGMRLcOBFih9R7iS226lSrtH761VNOOSjjES%2B%2FZfc1vqWBf1uc66NC9KER8ROG%2BYobwozpMsaSLv9yXBihgNVQYJxC9xpj9R0f22bvzpt%2F2yMNSSpLwGOrEB%2FmEkdO83A3njSH8FY9lkxrKKX9cSggyszDZmqA2OpbD8TxcETb6HdjHRT5W2SfTBgqaYwfA%2B11ODtua0rmBtfac2la%2FNbjtNInpJXY5mBuXICEH7dBwTx6gGOqeLkbfhdPmqUFJN%2FHimbzp8V197zzy3pVm9CVAYha2Uocm7usVAaTyhxjyqQHsEfe3hzOueqopkQWF%2F%2FoH%2FYU1gzfikaWQqkGlS2VYT9sStsGe4IRC4&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20250116T144326Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYRIWHQ54B%2F20250116%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=524ad56e65d67da5b14c5cfe63207ce3d93fa19a9e98ef094bac0b3043b8a62e&hash=dd242322434ef34ab0cc05e5bbe31b8ce60e0647d87822136560f14f00fd443e&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0273117724012419&tid=spdf-c64b891b-7b51-4f5a-bec9-ccb13e9dd5c5&sid=8cfd6848255ed14b955baec73f538d5d9e6cgxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=01025f5454070a550101&rr=902ee0bb9b169fb8&cc=gb"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
@@ -384,6 +407,7 @@
                   <h4 class="title">CanonicalFusion: Generating Drivable 3D Human Avatars from Multiple Images</h4>
                   <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon</p>
                   <p class="description">European Conference on Computer Vision (ECCV), 2024</p>
+                  <p class="description">Work done during <b>internship at KETI (Korea Electronics Technology Institute), South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-text"></i> ECCV</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2407.04345"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
@@ -404,6 +428,7 @@
                   <h4 class="title">Close Imitation of Expert Retouching for Black-and-White Photography</h4>
                   <p class="author">Seunghyun Shin, <b>Jisu Shin</b>, Jihwan Bae, Inwook Shim and Hae-Gon Jeon </p>
                   <p class="description">Computer Vision and Pattern Recognition (CVPR), 2024</p>
+                  <p class="description">Collaboration with <b>Inha University, South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> CVPR</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2024/papers/Shin_Close_Imitation_of_Expert_Retouching_for_Black-and-White_Photography_CVPR_2024_paper.pdf"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
@@ -423,7 +448,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Scene Structure Guidance Network: Unfolding Graph Partitioning into Pixel-Wise Feature Learning</h4>
                   <p class="author"><b>Jisu Shin</b>, Seunghyun Shin, and Hae-Gon Jeon</p>
-                  <p class="description">Arxiv</p>
+                  <p class="description">Technical Report</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/CanonicalFusion"><i class="bi bi-github"></i> Code</a> -->
@@ -572,9 +597,9 @@
           <h3 class="service-title">Honors</h3>
           <ul>
             <li>Selected as the Participants for International Computer Vision Summer School (ICVSS), July 2025</li>
-            <li>Selected as Internship Program on 3D Vision Team at Huawei Noah's Ark Lab, United Kingdom, Dec 2024 ~ Aug 2025</li>
-            <li>Selected as Internship Program on Electronics and Telecommunications Research Institute (ETRI), Jul 2019 ~ Aug 2019</li>
+            <li>Selected as Internship Program on 3D Vision Team at Huawei Noah's Ark Lab, United Kingdom, Dec 2024 ~ Sep 2025</li>
             <li>Selected as Internship Program on Korea Electronics Technology Institute (KETI), Jun 2023 ~ Mar 2024</li>
+            <li>Selected as Internship Program on Electronics and Telecommunications Research Institute (ETRI), Jul 2019 ~ Aug 2019</li>
             <li>Selected as Summer School Exchange Program Scholarship on UC Berkeley, Jun 2018 ~ Aug 2018</li>
           </ul>
         </div>
@@ -582,10 +607,9 @@
         <div class="service-content"><!--data-aos="fade-up"-->
           <h3 class="service-title">Awards</h3>
           <ul>
-              <li>Excellent Paper Award, The 29th International Workshop on Frontiers of Computer Vision (IW-FCV 2023), Feb 2023 </li>
               <li>Finalist, 2024 Qualcomm Innovation Fellowship Korea, Qualcomm Technologies, Inc., Dec 2024 </li>
               <li>7th Hong Bok-Soon Scholarship, Development Foundation, GIST, Nov 2024. </li>
-
+              <li>Excellent Paper Award, The 29th International Workshop on Frontiers of Computer Vision (IW-FCV 2023), Feb 2023 </li>
           </ul>
         </div>
       </div>
@@ -605,15 +629,18 @@
         <div class="service-content"><!--data-aos="fade-up"-->
           <h3 class="service-title">Conference Reviewer</h3>
           <ul>
-            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024</li>
-            <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025</li>
+            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2026</li>
+            <li>International Conferernce on Learning Representations (ICLR) - 2026</li>
             <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2025</li>
+            <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025</li>
+            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024</li>
           </ul>
         </div>
 
         <div class="service-content"><!--data-aos="fade-up"-->
           <h3 class="service-title">Journal Reviewer</h3>
           <ul>
+              <li>Frontiers in AI - Machine Learning and Artificial Intelligence</li>
               <li>Neural Networks, Elsevier</li>
           </ul>
 
@@ -710,7 +737,7 @@
             <div class="info">
               <div class="d-flex align-items-center">
                 <i class="bi bi-geo-alt"></i>
-                <p>GIST, Electrical Engineering and Computer Science Building C, Room 412<br>123, Cheomdangwagi-ro, Buk-gu, Gwangju, Republic of Korea </p>
+                <p>Yonsei University, Yonsei Engineering Research Park, Room 425a<br>Sinchon-dong, Seoul, Republic of Korea </p>
               </div>
 
               <div class="d-flex align-items-center mt-4">
@@ -723,40 +750,11 @@
                 <p><a href="https://www.linkedin.com/in/jisu-shin-0793842b7/", title="Go to the page", target="_blank"><strong>Linkedin</strong></a></p>
                 
               </div>
-<!-- 
-              <div class="d-flex align-items-center mt-4">
-                <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55s</p>
-              </div> -->
-
             </div>
           </div>
 
-          <!-- <div class="col-lg-5 col-md-8">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-              </div>
-              <div class="form-group mt-3">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div> -->
-
           <div class="col-lg-6 col-md-8 aos-init aos-animate" data-aos="fade-up">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5274.111763190701!2d126.83913729956485!3d35.228312250546836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35718e3eca585555%3A0xdc0f4b712e5a337a!2sSchool%20of%20Electrical%20Engineering%20and%20Computer%20Science!5e0!3m2!1sen!2sus!4v1647945517618!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/place/%EC%97%B0%EC%84%B8%EB%8C%80%ED%95%99%EA%B5%90+%EA%B3%B5%ED%95%99%EC%9B%90/data=!4m6!3m5!1s0x357c9913cd31e10d:0x2e862a8b6ba600ad!8m2!3d37.5608403!4d126.9354738!16s%2Fg%2F11p4frxt3k?entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D&hl=en" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy"></iframe>
             <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1818.5645994052868!2d-79.94718189770308!3d40.443273713413646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f2216b3de60b%3A0x9dc3e7773e241828!2z64m07JuwLeyCrOydtOuovCDtmYA!5e0!3m2!1sen!2sus!4v1665190588803!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen loading="lazy"></iframe>-->
             <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8969.253533810363!2d-79.92984555617775!3d40.43840602142718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f1ff639ed809%3A0x6b5e87e18298820e!2s1723%20Murray%20Ave%2C%20Pittsburgh%2C%20PA%2015217!5e0!3m2!1sen!2sus!4v1669777347849!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen loading="lazy"></iframe>-->
           </div>
