--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Video Color Grading via Look-Up Table Generation</h4>
                   <p class="author">Seunghyun Shin, Dongmin Shin, <b>Jisu Shin</b>, Hae-Gon Jeon, and Joon-Young Lee</p>
-                  <p class="description">International Conference on Computer Vision (ICCV), 2025</p>
+                  <p class="description"><b>International Conference on Computer Vision (ICCV)</b>, 2025</p>
                   <p class="description">Collaboration with <b>Adobe Research</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://iccv.thecvf.com/Conferences/2025/AcceptedPapers"><i class="bi bi-file-text"></i> ICCV</a>
@@ -427,7 +427,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">CanonicalFusion: Generating Drivable 3D Human Avatars from Multiple Images</h4>
                   <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon</p>
-                  <p class="description">European Conference on Computer Vision (ECCV), 2024</p>
+                  <p class="description"><b>European Conference on Computer Vision (ECCV)</b>, 2024</p>
                   <p class="description">Work done during <b>internship at KETI (Korea Electronics Technology Institute), South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-text"></i> ECCV</a>
@@ -448,7 +448,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Close Imitation of Expert Retouching for Black-and-White Photography</h4>
                   <p class="author">Seunghyun Shin, <b>Jisu Shin</b>, Jihwan Bae, Inwook Shim and Hae-Gon Jeon </p>
-                  <p class="description">Computer Vision and Pattern Recognition (CVPR), 2024</p>
+                  <p class="description"><b>Computer Vision and Pattern Recognition (CVPR)</b>, 2024</p>
                   <p class="description">Collaboration with <b>Inha University, South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> CVPR</a>
@@ -488,7 +488,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Task-specific Scene Structure Representations</h4>
                   <p class="author"><b>Jisu Shin*</b>, Seunghyun Shin*, and Hae-Gon Jeon (* equally contributed)</p>
-                  <p class="description">The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023</p>
+                  <p class="description"><b>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</b>, 2023</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
