--- a/index.html
+++ b/index.html
@@ -337,33 +337,12 @@
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <img src="assets/img/off_the_grid.jpg" class="img-fluid my-sm-1">
-                </div>
-                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
-                  <h4 class="title">Off the Grid: Detection of Primitives for Feed-Forward 3D Gaussian Splatting</h4>
-                  <p class="author">Arthur Moreau, Richard Shaw, Michal Nazarczuk, <b>Jisu Shin</b>, Thomas Tanay, Zhensong Zhang, Songcen Xu, Eduardo Pérez-Pellitero</p>
-                  <p class="description">Under Review</p>
-                  <p class="description">Work done during <b>internship at Huawei Noah's Ark Lab 3D Vision Team, UK</b></p>
-                  <div class="link">
-                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-text"></i> ICCV</a> -->
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
-                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-github"></i> Code</a> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="portfolio-item filter-conf">
-            <div class="portfolio-wrap">
-              <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                   <img src="assets/img/chroma.png" class="img-fluid my-sm-1">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">CHROMA: Consistent Harmonization of Multi-View Appearance via Bilateral Grid Prediction</h4>
                   <p class="author"><b>Jisu Shin</b>, Richard Shaw, Seunghyun Shin, Zhensong Zhang, Hae-Gon Jeon, Eduardo Pérez-Pellitero</p>
-                  <p class="description">Under Review</p>
+                  <p class="description"><b>The Fourteenth International Conference on Learning Representations (ICLR), 2026</b> </p>
                   <p class="description">Work done during <b>internship at Huawei Noah's Ark Lab 3D Vision Team, UK</b></p>
                   <div class="link">
                     <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-text"></i> ICCV</a> -->
@@ -375,6 +354,27 @@
             </div>
           </div>
 
+          <div class="portfolio-item filter-conf">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/off_the_grid.jpg" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">Off the Grid: Detection of Primitives for Feed-Forward 3D Gaussian Splatting</h4>
+                  <p class="author">Arthur Moreau, Richard Shaw, Michal Nazarczuk, <b>Jisu Shin</b>, Thomas Tanay, Zhensong Zhang, Songcen Xu, Eduardo Pérez-Pellitero</p>
+                  <p class="description">Under Review</p>
+                  <p class="description">Work done during <b>internship at Huawei Noah's Ark Lab 3D Vision Team, UK</b></p>
+                  <div class="link">
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-text"></i> ICCV</a> -->
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arthurmoreau.github.io/OffTheGrid/"><i class="bi bi-file-earmark-pdf-fill"></i> Project Page</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2512.15508"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-github"></i> Code</a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           
           <div class="portfolio-item filter-conf">
             <div class="portfolio-wrap">
@@ -385,7 +385,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Video Color Grading via Look-Up Table Generation</h4>
                   <p class="author">Seunghyun Shin, Dongmin Shin, <b>Jisu Shin</b>, Hae-Gon Jeon, and Joon-Young Lee</p>
-                  <p class="description"><b>International Conference on Computer Vision (ICCV)</b>, 2025</p>
+                  <p class="description"><b>International Conference on Computer Vision (ICCV), 2025</b></p>
                   <p class="description">Collaboration with <b>Adobe Research</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://iccv.thecvf.com/Conferences/2025/AcceptedPapers"><i class="bi bi-file-text"></i> ICCV</a>
@@ -406,7 +406,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">The path-tracing simulation of light-field camera system: SurfCam/GrainCams for lunar surface exploration</h4>
                   <p class="author">Minbae Kim, Minsup Jeong, Mingyeong Lee, Jihun Kim, Young-Jun Choi, Sungsoo S Kim, Hae-Gon Jeon, and <b>Jisu Shin</b></p>
-                  <p class="description">Advances in Space Research, 2024</p>
+                  <p class="description"><b>Advances in Space Research, 2024</b></p>
                   <p class="description">Collaboration with <b>Kasi (Korea Astronomy and Space Science Institute), South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://www.sciencedirect.com/journal/advances-in-space-research"><i class="bi bi-file-text"></i> ASR</a>
@@ -427,7 +427,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">CanonicalFusion: Generating Drivable 3D Human Avatars from Multiple Images</h4>
                   <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon</p>
-                  <p class="description"><b>European Conference on Computer Vision (ECCV)</b>, 2024</p>
+                  <p class="description"><b>European Conference on Computer Vision (ECCV), 2024</b></p>
                   <p class="description">Work done during <b>internship at KETI (Korea Electronics Technology Institute), South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-text"></i> ECCV</a>
@@ -448,12 +448,33 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Close Imitation of Expert Retouching for Black-and-White Photography</h4>
                   <p class="author">Seunghyun Shin, <b>Jisu Shin</b>, Jihwan Bae, Inwook Shim and Hae-Gon Jeon </p>
-                  <p class="description"><b>Computer Vision and Pattern Recognition (CVPR)</b>, 2024</p>
+                  <p class="description"><b>Computer Vision and Pattern Recognition (CVPR), 2024</b></p>
                   <p class="description">Collaboration with <b>Inha University, South Korea</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> CVPR</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2024/papers/Shin_Close_Imitation_of_Expert_Retouching_for_Black-and-White_Photography_CVPR_2024_paper.pdf"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/seunghyuns98/Decolorization"><i class="bi bi-github"></i> Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio-item filter-conf">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/ssgnet.png" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">Task-specific Scene Structure Representations</h4>
+                  <p class="author"><b>Jisu Shin*</b>, Seunghyun Shin*, and Hae-Gon Jeon (* equally contributed)</p>
+                  <p class="description"><b>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023 <b>(Oral)</b></p>
+                  <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
               </div>
@@ -479,29 +500,7 @@
             </div>
           </div>
 
-          <div class="portfolio-item filter-conf">
-            <div class="portfolio-wrap">
-              <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <img src="assets/img/ssgnet.png" class="img-fluid my-sm-1">
-                </div>
-                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
-                  <h4 class="title">Task-specific Scene Structure Representations</h4>
-                  <p class="author"><b>Jisu Shin*</b>, Seunghyun Shin*, and Hae-Gon Jeon (* equally contributed)</p>
-                  <p class="description"><b>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</b>, 2023</p>
-                  <div class="link">
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          
-          <div class="portfolio-item filter-pat">
+                    <div class="portfolio-item filter-pat">
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
