--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Task-specific Scene Structure Representations</h4>
                   <p class="author"><b>Jisu Shin*</b>, Seunghyun Shin*, and Hae-Gon Jeon (* equally contributed)</p>
-                  <p class="description"><b>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023 <b>(Oral)</b></p>
+                  <p class="description"><b>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023 (Oral)</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
@@ -649,17 +649,17 @@
         <div class="service-content"><!--data-aos="fade-up"-->
           <h3 class="service-title">Conference Reviewer</h3>
           <ul>
-            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2026</li>
+            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024, 2025, 2026</li>
+            <li>IEEE/CVF European Conference on Computer Vision (ECCV) - 2026</li>
             <li>International Conferernce on Learning Representations (ICLR) - 2026</li>
-            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2025</li>
-            <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025</li>
-            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024</li>
+            <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025, 2026</li>
           </ul>
         </div>
 
         <div class="service-content"><!--data-aos="fade-up"-->
           <h3 class="service-title">Journal Reviewer</h3>
           <ul>
+              <li>Frontiers in Virtual Reality</li>
               <li>Frontiers in AI - Machine Learning and Artificial Intelligence</li>
               <li>Neural Networks, Elsevier</li>
           </ul>
