--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                   <p class="description"><b>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023 (Oral)</b></p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a> -->
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a>
                   </div>
@@ -653,6 +653,7 @@
             <li>IEEE/CVF European Conference on Computer Vision (ECCV) - 2026</li>
             <li>International Conferernce on Learning Representations (ICLR) - 2026</li>
             <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025, 2026</li>
+            <li>British Machine Vision Conference (BMVC) - 2026</li>
           </ul>
         </div>
 
